--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* style.css */
 body {
     margin: 0;
     font-family: Arial, sans-serif;
@@ -51,6 +52,7 @@ footer {
 .banner {
     width: 100%;
     overflow: hidden;
+    margin-top: 80px; /* Adjust the margin-top value based on your navbar height */
 }
 
 .banner img {
@@ -70,6 +72,7 @@ footer {
     top: 0;
     width: 100%;
     z-index: 1000;
+    
 }
 
 .logo {
@@ -77,7 +80,7 @@ footer {
 }
 
 .logo img {
-    width: 50px; /* Adjust as needed */
+    width: 100px; /* Adjust as needed */
 }
 
 .nav-links {
@@ -86,17 +89,17 @@ footer {
     margin: 0;
     padding: 0;
     flex: 2;
-    justify-content: center;
+    justify-content: left;
 }
 
 .nav-links li {
-    margin: 0 10px;
+    margin: 0 30px;
 }
 
 .nav-links a {
     text-decoration: none;
     color: #333;
-    font-size: 16px;
+    font-size: 21px;
 }
 
 .menu-toggle {
@@ -104,19 +107,16 @@ footer {
     cursor: pointer;
 }
 
-@media (max-width: 768px) {
-    .nav-links {
-        display: none;
-        flex-direction: column;
-        width: 100%;
-        text-align: center;
-    }
+.cart {
+    margin-right: 225px; /* ปรับขนาดของ margin ตามที่ต้องการ */
+}
 
-    .nav-links li {
-        margin: 10px 0;
-    }
+.cart a {
+    color: #333; /* สีของไอคอนหรือรูปภาพ */
+    text-decoration: none; /* ไม่ให้มี underline ใต้ข้อความ */
+    font-size: 20px; /* ขนาดของไอคอนหรือรูปภาพ */
+}
 
-    .menu-toggle {
-        display: block;
-    }
+.cart a:hover {
+    color: #FF5733; /* สีของไอคอนหรือรูปภาพเมื่อ hover */
 }
