--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
     background-color: #333;
     color: #fff;
     padding: 10px 0;
-    text-align: center;
+    /* text-align: center; */
 }
 
 .container {
