--- a/css/stylenav.css
+++ b/css/stylenav.css
@@ -32,10 +32,8 @@ footer {
 
 .container {
     display: flex;
-    flex-wrap: wrap; /* Allow content to wrap on smaller screens */
-    justify-content: space-between;
+    flex-direction: row;
     align-items: flex-start;
-    margin: 0 auto;
 }
 
 .project img {
@@ -72,10 +70,10 @@ footer {
     background-color: #fff;
     padding: 10px 20px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    position: relative;
+    position: fixed;
+    top: 0;
     width: 100%;
     z-index: 1000;
-
 }
 
 .logo {
